[package]
name = "postcode_lookup"
version = "0.1.0"
authors = ["Alexander Lyon <arlyon@me.com>"]
edition = "2018"

[dependencies]
tokio = "0.2.0-alpha"
hyper = "0.13.0-alpha"
hyper-tls = "0.4.0-alpha"
futures-preview = "0.3.0-alpha"

serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

itertools = "0.8"
quicli = "0.4"
structopt = "0.2"
human-panic = "1.0"
async-trait = "0.1"
url = { version="2.1", features = ["serde"] }